[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yahoo-finance-mcp"
version = "0.1.0"
description = "MCP Server for Yahoo Finance - Access stock quotes, historical data, financials, options, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["mcp", "yahoo-finance", "stocks", "trading", "finance", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "mcp>=1.0.0",
    "yfinance>=0.2.40",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
yahoo-finance-mcp = "yahoo_finance_mcp:mcp.run"

[project.urls]
Homepage = "https://github.com/yourusername/yahoo-finance-mcp"
Repository = "https://github.com/yourusername/yahoo-finance-mcp"
Documentation = "https://github.com/yourusername/yahoo-finance-mcp#readme"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
